deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vote-deploy
  labels:
    name: vote-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: vote
        app: vote
    spec:
      containers:
      - image:  pragra/vote:v1
        name:  vote
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  80
          name:  webport
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
        - name: data
          emptyDir: {}
