pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: votep
  labels:
    app: oldvote
    version: v1
spec:
  containers:
  - name: votep
    image: pragra/vote:v1
    ports:
    - name:  containerport
      containerPort: 80
      protocol: TCP
    resources:
      limits:
        memory: "100Mi"
        cpu: "100m"
