pod_with_volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-consuming-pvc
spec:
  containers:
  - image: alpine
    name: app
    command: 
      - /bin/sh
      - "-c"
      -  "while true; do sleep 60; done;"
    volumeMounts:
      - mountPath: /mnt/data
        name: app-storage
  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: db-pvc
