vote.yml
apiVersion: v1
kind: Pod
metadata:
  name: vote
  labels:
    app: vote
spec:
  containers:
  - name: vote
    image: pragra/vote:v1
    ports:
    - name:  containerport
      containerPort: 80
      protocol: TCP
    resources:
      limits:
        memory: "100Mi"
        cpu: "100m"
...
---
kind: Service
apiVersion: v1
metadata:
  name:  votesvc
spec:
  selector:
    app:  vote
  ports:
  - name:  voteport
    port:  80
    targetPort:  80
...
---
apiVersion: v1
kind: Pod
metadata:
  name: result
  labels:
    app: result
spec:
  containers:
  - name: vote
    image: pragra/result
    ports:
    - name:  containerport
      containerPort: 80
      protocol: TCP
    resources:
      limits:
        memory: "100Mi"
        cpu: "100m"
...
---
kind: Service
apiVersion: v1
metadata:
  name:  resultsvc
spec:
  selector:
    app:  result
  ports:
  - name:  resultport
    port:  80
    targetPort:  80
